change brower tips text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/index.css">
 </head>
-<body>
+<body class="noselect">
 	<!-- <audio id="audio" preload="auto" controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
         <source src="./song/ganxie.mp3" type="audio/ogg">
     </audio> -->
