--- a/college.html
+++ b/college.html
@@ -56,7 +56,7 @@
 		<p>技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></p>
 	</div>
 	<!-- footer end -->
-	<div class="lianxi">投稿<br>联系</div>
+	<div class="lianxi noselect">投稿<br>联系</div>
 	<div class="erweima">
 		<img src="./images/dacheng.jpg" alt="">
 	</div>
