--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/about.css">
 </head>
-<body>
+<body class="noselect">
 	<div class="header">
 		<div class="header-cont clearfix">
 			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
