--- a/article_list.html
+++ b/article_list.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="./css/list.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
 </head>
-<body>
+<body class="noselect">
 	<div class="header">
 		<div class="header-cont clearfix">
 			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
