--- a/article_list.html
+++ b/article_list.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/list.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
-	<script src="https://cdn.bootcss.com/jquery_lazyload/1.9.7/jquery.lazyload.min.js"></script>
+	<script src="./js/jquery.lazyload.min.js"></script>
 </head>
 <body class="noselect">
 	<div class="header">
@@ -39,7 +39,7 @@
 					<img v-bind:src="item.img" alt="">
 				</div> -->
 				<div class="img-box">
-					<img class="lazy" width="640" height="480" v-bind:data-original="item.img" alt="">
+					<img class="lazy" width="330" height="200" v-bind:data-original="item.img" alt="">
 				</div>
 				<p class="msg clearfix"><a class="title" v-bind:href="item.url" target="_blank">{{item.name}} |  {{item.author}}</a><span class="time">{{item.time}}</span></p>
 			</li>
