--- a/college.html
+++ b/college.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/college.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
+	<script src="./js/jquery.lazyload.min.js"></script>
 </head>
 <body class="noselect">
 	<div class="header">
@@ -35,7 +36,7 @@
 		<ul id="college" class="clearfix" v-clock>
 			<li v-for="item in items">
 				<div class="img-box">
-					<img v-bind:src="item.img" alt="">
+					<img class="lazy" width="330" height="200" v-bind:data-original="item.img" alt="">
 				</div>
 				<p class="msg"><a v-bind:href="item.url" target="_blank">{{item.name}} |  {{item.author}}</a></p>
 			</li>
@@ -65,6 +66,13 @@
 	</div>
 	<!-- 返回顶部 -->
 	<div class="totop"></div>
+	<script>
+		$(function(){
+			$("img.lazy").lazyload({
+    			threshold : 200
+			});
+		})
+	</script>
 	<script>
 		$(function(){
 			$(".lianxi").mouseover(function(){
