--- a/mobile/index.html
+++ b/mobile/index.html
@@ -62,7 +62,7 @@
 	</div>
 	<p class="tips">更多精彩尽在微信公众号：还读我诗</p>
 	<div class="totop">
-		<a class="btn btn-primary btn-lg" href="#header">返回顶部</a>
+		<a class="btn btn-primary" href="#header">返回顶部</a>
 	</div>
 	<div class="tellyou">声明：所有原创一切权利归作者所有！<br>如若引用转载，请务必先与作者或还读我诗平台联系！</div>
 	<div class="tellyou copy">Copyright © 2016-2017 还读我诗 版权所有</div>
