add new article

--- a/college.html
+++ b/college.html
@@ -38,7 +38,7 @@
 				<a class="img-box" v-bind:href="item.url" target="_blank">
 					<img class="lazy" width="330" height="200" v-bind:data-original="item.img" alt="">
 				</a>
-				<p class="msg"><a v-bind:href="item.url" target="_blank">{{item.name}} |  {{item.author}}</a></p>
+				<p class="msg"><a v-bind:href="item.url" v-bind:title="item.name" target="_blank">{{item.name}} |  {{item.author}}</a></p>
 			</li>
 		</ul>
 	</div>
