--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<ul id="onShow" class="clearfix" v-clock>
 				<li v-for="item in items">
 					<a class="img-box" v-bind:href="item.url" target="_blank"><img class="lazy" width="575" height="400" v-bind:data-original="item.img" alt=""></a>
-					<a class="title" v-bind:href="item.url" target="_blank">{{item.name}} <span>｜ {{item.author}}</span></a>
+					<a class="title" v-bind:href="item.url" v-bind:title="item.name" target="_blank">{{item.name}} <span>｜ {{item.author}}</span></a>
 					<p class="say">{{item.say}}</p>
 				</li>
 			</ul>
