--- a/article_list.html
+++ b/article_list.html
@@ -41,7 +41,7 @@
 				<a class="img-box" v-bind:href="item.url" target="_blank">
 					<img class="lazy" width="330" height="200" v-bind:data-original="item.img" alt="">
 				</a>
-				<p class="msg clearfix"><a class="title" v-bind:href="item.url" target="_blank">{{item.name}} |  {{item.author}}</a><span class="time">{{item.time}}</span></p>
+				<p class="msg clearfix"><a class="title" v-bind:href="item.url" target="_blank" v-bind:title="item.name">{{item.name}} |  {{item.author}}</a><span class="time">{{item.time}}</span></p>
 			</li>
 		</ul>
 	</div>
