--- a/yichenlong/index.html
+++ b/yichenlong/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>嘉兴亿宸龙箱包有限公司欢迎您！</title>
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes" />
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link rel="stylesheet" href="./css/common.css">
