--- a/yichenlong/index.html
+++ b/yichenlong/index.html
@@ -30,7 +30,12 @@
 	<div class="main">
 		<div class="section">
 			<h2>关于亿宸龙</h2>
-			<div class="about_msg">亿宸龙箱包有限公司位于浙江省嘉兴市，公司厂房总面积约15000平方米。目前员工约220人，其中生产管理和办公室人员35人。公司配有专门的开发部门，可以满足每月50只样品的打样。公司新进标准国标测试机器，包括轮子跑步机，拉杆手把震荡测试机，箱子跌落测试机，板材耐冲击测试机等。工厂目前共有5条生产线。1条镁铝合金拉杆箱生产线；3条铝框箱生产线；1条拉链箱生产线。平均日产量500只。公司计划1-2月内将再建1条拉链箱生产线。亿宸龙欢迎国内外客户的到来！</div>
+			<div class="about_msg">
+				<p>嘉兴亿宸龙箱包有限公司，位于美丽的箱包之乡平湖钟埭工业园。</p>
+				<p>年产量80万只拉杆箱，提供从抽板吸塑到成品包装一条龙服务。</p>
+				<p>本公司专注于生产ABS、ABS合金料、ABS/PC膜、纯PC以及镁铝合金拉杆箱。</p>
+				<p>公司现有1台抽板机，7台吸塑机。5条生产线；厂房面积约1.5万平方米。</p>
+			</div>
 		</div>
 		<div class="section">
 			<h2>产品展示</h2>
