--- a/yichenlong/index.html
+++ b/yichenlong/index.html
@@ -35,6 +35,7 @@
 				<p>年产量80万只拉杆箱，提供从抽板吸塑到成品包装一条龙服务。</p>
 				<p>本公司专注于生产ABS、ABS合金料、ABS/PC膜、纯PC以及镁铝合金拉杆箱。</p>
 				<p>公司现有1台抽板机，7台吸塑机。5条生产线；厂房面积约1.5万平方米。</p>
+				<p style="color:teal">亿宸龙箱包全体成员竭诚欢迎国内外客户前来考察合作！</p>
 			</div>
 		</div>
 		<div class="section">
@@ -54,7 +55,8 @@
 				<li>Calvin Klein</li>
 				<li>TOMMY-HILFIGER</li>
 				<li>Traveller's choice</li>
-				<li>American tourister EF</li>
+				<li>American tourister</li>
+				<li>EF</li>
 				<li>NEWEST</li>
 				<li>DUNLOP</li>
 				<li>MEXICAN</li>
@@ -62,7 +64,7 @@
 				<li>HANNASHOP</li>
 				<li>Life VC</li>
 				<li>rienda</li>
-				<li>Ricado合作洽谈中</li>
+				<li>Ricado</li>
 				<li>...</li>
 			</ul>
 		</div>
