add en yichenlong

--- a/yichenlong/index_en.html
+++ b/yichenlong/index_en.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>嘉兴亿宸龙箱包有限公司欢迎您！</title>
+	<title>welcome to ycl compony！</title>
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
 	<meta name="keywords" content="" />
@@ -11,14 +11,23 @@
 	<link rel="stylesheet" href="./css/index.css">
 	<link rel="stylesheet" href="./css/slide.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
+	<style>
+		.main .section h2{
+			width:400px;
+		}
+		.main .section .about_msg p{
+			text-align: justify;
+			text-indent:40px;
+		}
+	</style>
 </head>
 <body>
 	<!-- header begin -->
 	<div class="header">
 		<div class="header_cont clearfix">
-			<div class="logo"><a href="./index.html">嘉兴亿宸龙箱包有限公司</a></div>
+			<div class="logo"><a href="./index.html">Billion dragon luggage Co.,Ltd</a></div>
 			<div class="language"><a class="zh" href="./index.html">中</a><a href="./index_en.html">En</a></div>
-			<div class="right_msg">专业·诚信·务实·发展</div>
+			<div class="right_msg">specialty·credibility·practical·development</div>
 		</div>
 	</div>
 	<!-- header end -->
@@ -30,17 +39,17 @@
 	<!-- main begin -->
 	<div class="main">
 		<div class="section">
-			<h2>关于亿宸龙</h2>
+			<h2>About us</h2>
 			<div class="about_msg">
-				<p>嘉兴亿宸龙箱包有限公司，位于美丽的箱包之乡平湖钟埭工业园。</p>
-				<p>年产量80万只拉杆箱，提供从抽板吸塑到成品包装一条龙服务。</p>
-				<p>本公司专注于生产ABS、ABS合金料、ABS/PC膜、纯PC以及镁铝合金拉杆箱。</p>
-				<p>公司现有1台抽板机，7台吸塑机。5条生产线；厂房面积约1.5万平方米。</p>
-				<p style="color:teal;font-weight:bold;">亿宸龙箱包全体成员竭诚欢迎国内外客户前来考察合作！</p>
+				<p>Jiaxing Yichen dragon bags Co., Ltd., located in the beautiful town of Pinghu Zhong Dai bags industrial park.</p>
+				<p>Annual output of 800 thousand pull rod box, from suction plate plastic to finished packaging one-stop service.</p>
+				<p>Our company focused on the production of ABS, ABS alloy material, ABS/PC film, pure PC and magnesium alloy rod box.</p>
+				<p>Our company has 1 sets of pumping machine, 7 blister machine. 5 production lines, workshop area of about 15 thousand square meters.</p>
+				<p style="color:teal;font-weight:bold;">Billion dragon luggage all members welcome domestic and international customers to come to investigate cooperation!</p>
 			</div>
 		</div>
 		<div class="section">
-			<h2>产品展示</h2>
+			<h2>Product show</h2>
 			<ul class="product clearfix">
 				<li><img src="./images/product.png" alt=""></li>
 				<li><img src="./images/product.png" alt=""></li>
@@ -51,7 +60,7 @@
 			</ul>
 		</div>
 		<div class="section">
-			<h2>合作客户</h2>
+			<h2>Cooperative partner</h2>
 			<ul class="custom clearfix">
 				<li>Calvin Klein</li>
 				<li>TOMMY-HILFIGER</li>
@@ -70,17 +79,17 @@
 			</ul>
 		</div>
 		<div class="section contact">
-			<h2>联系我们</h2>
-			<p class="msg_list">电话：0573-85980661</p>
-			<p class="msg_list">传真：0573-85980661</p>
-			<p class="msg_list">邮箱：liu-colin@foxmail.com</p>
-			<p class="msg_list">邮编：314213</p>
-			<p class="msg_list">地址：嘉兴市·平湖市·钟埭镇真圣路98号</p>
+			<h2>Contact us</h2>
+			<p class="msg_list">Phone：0573-85980661</p>
+			<p class="msg_list">Fax：0573-85980661</p>
+			<p class="msg_list">Email：liu-colin@foxmail.com</p>
+			<p class="msg_list">Postcode：314213</p>
+			<p class="msg_list">Address：Jiaxing City, Pinghu City, Chung town really st No. 98</p>
 		</div>
 	</div>
 	<!-- main end -->
 	<!-- footer begin -->
-	<div class="footer">Copyright © 2016-2017 嘉兴亿宸龙箱包有限公司 All Rights Reversed </div>
+	<div class="footer">Copyright © 2016-2017 Jiaxing billion dragon luggage Co.,Ltd. All Rights Reversed </div>
 	<!-- footer end -->
 	<!--右侧悬浮菜单 开始-->
 	<div class="slide">
@@ -91,10 +100,10 @@
 		</ul>
 		<ul class="info">
 			<li class="qq">
-				<p>在线沟通，请点我<a href="http://wpa.qq.com/msgrd?v=3&uin=1358295745&site=qq&menu=yes" target="_blank">在线咨询</a></p>
+				<p>contact me online<a href="http://wpa.qq.com/msgrd?v=3&uin=1358295745&site=qq&menu=yes" target="_blank">online</a></p>
 			</li>
 			<li class="tel">
-				<p>咨询热线：<br>0573-85980661<br>传真：<br>0573-85980661</p>
+				<p>Phone：<br>0573-85980661<br>Fax：<br>0573-85980661</p>
 			</li>
 			<li class="wx" style="display:block;">
 				<div class="img"><img src="./images/manager.jpg" /></div>
