--- a/yichenlong/index_en.html
+++ b/yichenlong/index_en.html
@@ -25,7 +25,7 @@
 	<!-- header begin -->
 	<div class="header">
 		<div class="header_cont clearfix">
-			<div class="logo"><a href="./index.html">Billion dragon luggage Co.,Ltd</a></div>
+			<div class="logo"><a href="./index.html">Yi chen dragon bags Co., Ltd</a></div>
 			<div class="language"><a class="zh" href="./index.html">中</a><a href="./index_en.html">En</a></div>
 			<div class="right_msg">specialty·credibility·practical·development</div>
 		</div>
@@ -45,7 +45,7 @@
 				<p>Annual output of 800 thousand pull rod box, from suction plate plastic to finished packaging one-stop service.</p>
 				<p>Our company focused on the production of ABS, ABS alloy material, ABS/PC film, pure PC and magnesium alloy rod box.</p>
 				<p>Our company has 1 sets of pumping machine, 7 blister machine. 5 production lines, workshop area of about 15 thousand square meters.</p>
-				<p style="color:teal;font-weight:bold;">Billion dragon luggage all members welcome domestic and international customers to come to investigate cooperation!</p>
+				<p style="color:teal;font-weight:bold;">Yi chen dragon all members welcome domestic and international customers to come to investigate cooperation!</p>
 			</div>
 		</div>
 		<div class="section">
@@ -89,7 +89,7 @@
 	</div>
 	<!-- main end -->
 	<!-- footer begin -->
-	<div class="footer">Copyright © 2016-2017 Jiaxing billion dragon luggage Co.,Ltd. All Rights Reversed </div>
+	<div class="footer">Copyright © 2016-2017 Jiaxing Yi chen dragon bags Co.,Ltd. All Rights Reversed </div>
 	<!-- footer end -->
 	<!--右侧悬浮菜单 开始-->
 	<div class="slide">
