--- a/yichenlong/index_en.html
+++ b/yichenlong/index_en.html
@@ -100,7 +100,7 @@
 		</ul>
 		<ul class="info">
 			<li class="qq">
-				<p>contact me online<a href="http://wpa.qq.com/msgrd?v=3&uin=1358295745&site=qq&menu=yes" target="_blank">online</a></p>
+				<p>contact me online<a href="http://wpa.qq.com/msgrd?v=3&uin=1358295745&site=qq&menu=yes" target="_blank">Click chat</a></p>
 			</li>
 			<li class="tel">
 				<p>Phone：<br>0573-85980661<br>Fax：<br>0573-85980661</p>
