change love file

--- a/love/liuxiaoni/index.html
+++ b/love/liuxiaoni/index.html
@@ -3,8 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<script src="https://unpkg.com/vue/dist/vue.js"></script>
-<title>Love you forever</title>
+<title>爱萍萍forever～</title>
 
 <style type="text/css">
 @font-face {
@@ -30,29 +29,16 @@
     </audio>
 <div id="mainDiv">
 	<div id="content">
-		<!-- <div id="code">
-			<span class="say">// 花样年华太美丽，牵扯了我们太多爱情的经历。</span><br />
-			<span class="say">// 虽然说时间是对我们真诚的磨历，</span><br />
-			<span class="say">// 但我始终相信你拥有，</span><br />
-			<div class="say">// 我永远放不下的温柔魅力。</div>
-			<span class="say">爱你。</span><br />
-			<span class="say">// 我喜欢和你在一起的感觉。</span><br />
-			<span class="say">// 如果我有一个秘密必须有人知道，</span><br />
-			<span class="say">// 我希望那个人是你。</span><br />
-			<span class="say">// 允许我在你心里建一座美丽的小屋，</span><br />
-			<span class="say">// 千万别理会别人说是违章建筑。</span><br />
-			<span class="say">我能想到最浪漫的事，就是和你一起慢慢变老！</span>
-		</div> -->
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					亲爱的，这是我们相爱在一起的时光。
+					刘小妮，这是我们相爱在一起的时光。
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
 					爱你直到永永远远。<br/>
-					<div class="signature">- 云姣</div>
+					<div class="signature">- Kevin</div>
 				</div>
 			</div>
 		</div>
@@ -63,7 +49,7 @@
 var offsetX = $("#loveHeart").width() / 2;
 var offsetY = $("#loveHeart").height() / 2 - 55;
 var together = new Date();
-together.setFullYear(2014, 2, 04);
+together.setFullYear(2014, 6, 20);
 together.setHours(20);
 together.setMinutes(0);
 together.setSeconds(0);
@@ -92,6 +78,6 @@ if (!document.createElement('canvas').getContext) {
 	$("#code").typewriter();
 }
 </script>
-
+<script src="../../js/bdtj.js"></script>
 </body>
 </html>
